# carchive

./: .gitignore  CLAUDE.md  ENV_README.md  Media-fix-undo-and-refix.txt  PR.md  README.md  activate.sh  activate_carchive.sh  analyze_cluster_content.py  api_server.py  apply_chat3_media_import.sh  apply_constraint_fix.sh  apply_embedding_columns.sh  apply_embedding_migration.sh  apply_embeddings_fix.sh  apply_media_message_fix.sh  apply_vector_fix.sh  associate_assistant_images.py  check_media.py  check_messages.py  comprehensive_fix.sh  conversation_render.html  create_py310_env.sh  criteria_Agent_Theory_20250120_012237.json  criteria_Agent_Theory_20250122_001721.json  criteria_Edmund_Husserl_and_Phenomenology_20250120_010811.json  criteria_article_20250121_233826.json  criteria_heart_sutra_science_20250120_012041.json  criteria_phenomenology_20250120_161336.json  debug_archive_cli.py  debug_media_handling.py  disable_conda_auto.sh  disable_conda_completely.sh  environment.yml  extract_cluster_samples.py  files.txt  find_dalle_messages.py  fix_all_dalle_images.py  fix_cli_environment.sh  fix_conda_base.sh  (+69 more)
alembic/: env.py
chat/: message_feedback.json  model_comparisons.json  shared_conversations.json  user.json
docs/:  carchive2-functional-units-overview.txt  conversations_json_format_hints_28-feb-2025.md  database_maintenance.md  embedding_clusters.md  embedding_fix_readme.md  embedding_solutions.md  enhanced_rendering_guide.md  environment_management.md  gencom_guide.md  gencom_templates_guide.md  groq_agent_usage.md  server_management.md  vector_dimension_fix.md  (+2 more)
(+248 files in other folders)
